blog view side spacing fix

--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -12,7 +12,7 @@
   }
   
   .home-wrapper {
-    padding: 20px 20px;
+    padding: 20px 70px;
   }
   .profiler-results{
     display: none;
@@ -29,6 +29,9 @@
 #hero-container-blog{
 	.home-logo {
     margin-top: 13px;
+  }
+  .home-header{
+    padding: 0px 70px 1px;
   }
 }
 
